--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
         "format:check": "prettier --check src/app/"
     },
     "dependencies": {
+        "@radix-ui/react-dropdown-menu": "^2.1.14",
         "@radix-ui/react-slot": "^1.2.2",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "lucide-react": "^0.508.0",
         "next": "15.3.2",
+        "next-themes": "^0.4.6",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "tailwind-merge": "^3.2.0"
@@ -27,10 +29,10 @@
         "@types/react": "^19",
         "@types/react-dom": "^19",
         "eslint": "^9",
-        "prettier": "^3.5.3",
         "eslint-config-next": "15.3.2",
-        "tailwindcss": "^4",
+        "prettier": "^3.5.3",
         "prettier-plugin-tailwindcss": "^0.6.11",
+        "tailwindcss": "^4",
         "tw-animate-css": "^1.2.9",
         "typescript": "^5"
     }
